--- a/pmapi/src/main/resources/application.properties
+++ b/pmapi/src/main/resources/application.properties
@@ -6,7 +6,7 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 
 # Database
 spring.jpa.show-sql = false
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.datasource.driver = com.mysql.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/projectmanager
